--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -18,8 +19,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.2",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "rate-limit-redis": "^4.2.3",
+    "winston": "^3.18.3"
   }
 }
